# demoinfocs2_lite

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  demoinfo2.txt
examples/: dump_header.rs  example.rs
macro_derive/: Cargo.toml
macro_derive/src/: lib.rs
src/: bit.rs  entity.rs  event.rs  game_event.rs  lib.rs  string_table.rs
src/entity/: decoder.rs  derive.rs  field.rs  fieldpath.rs  list.rs  serializer.rs
src/entity/serializer/: vector.rs
src/game_event/: derive.rs
