[package]
name = "demoinfocs2_lite"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "macro_derive",
]

[profile.release]
debug = true

[features]
default = ["handle_packet"]
handle_packet = []

[lib]
crate-type = ["lib"]

[dependencies]
bitstream-io = "4.5"
prost = "0.14"
snap = "1.1.1"
bytes = "1.10.1"
foldhash = "0.1.5"
log = "0.4"
macro_derive = { path = "./macro_derive" }
phf = { version = "0.12", default-features = false }
regex = "1.11.1"
env_logger = "0.11.8"

[build-dependencies]
prost-build = "0.14"
phf_codegen = "0.12"
keyvalues3 = { path = "../KeyValues3" }
